# ggi

./: LICENSE  README.md  pyproject.toml
src/ggi/: cli.py  helpers.py  supported_langs.py
