[project]
name = "ggi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shohei Jinno", email = "18493164+sjinno@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "requests>=2.32.3",
]

[project.scripts]
ggi = "ggi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
